# ELT

./: .gitignore  CMakeLists.txt  EngineEx.sln  EngineEx.vcxproj  EngineEx.vcxproj.filters  GL_caching.c  Makefile  README  README.md  common.mk  elt.pc  eltInstallation.sh  eltInstallation.sh~  elt_icon.h
Doc/InternetBlogging/: OpenGLEngineBlog#1.txt
Doc/_ProjectManager/: EngineEx.chm  EngineEx.hhp  MainWin_.htm  Table of Contents.hhc
Include/: EngineAssembly.h  ExAssert.h  ExCommon.h  ExNT.h  elt_console.h  elt_loadso.h  elt_timer.h
Include/Input/: elt_gamecontroller.h
Include/System/: GL_caching.h  elt_audio.h  elt_gl.h  elt_render.h  elt_win.h
Include/System/Mac/: macosx_win.h
Include/System/Unix/: unix_dialog.h  unix_win.h
Include/System/Win32/: win_GL.h  win_directX.h  win_net.h  win_win32.h  win_wndproc.h  wnd_common.h  wnd_filedialog.h  wnd_snd.h
Proj/CodeBlocks/: EngineEx.cbp  EngineEx.depend  EngineEx.layout
Proj/ELT/: ELT.cbp  ELT.depend  ELT.layout  EngineExDevLog.txt  ErrorLog_114_11_2_11_11_58.txt
Proj/android/jni/: Android.mk
Proj/codeblocks/: ELT.cbp  ELT.depend  ELT.layout
Proj/vs2010/: EngineEx.opensdf  EngineEx.sln  EngineEx.vcxproj  EngineEx.vcxproj.filters
Proj/vs2010/Debug/: CL.read.1.tlog  CL.write.1.tlog  EngineEx.exp  EngineEx.lastbuildstate  EngineEx.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  vc100.idb
Samples/CreateOpenGLWindow/: .main.c.swp  EngineExDevLog.txt  Makefile  main  main.c~
Samples/CreateWindow/: main  main.c~
Samples/OpenGLES/: Makefile
Samples/OpenGLRenderColorTriangle/: EngineExDevLog.txt  Makefile  main
Samples/OpenGLRenderTriangle/: EngineExDevLog.txt  Makefile  main
Source/: EngineAssembly.h  EngineConfig.h  EngineEx.h  EngineEx2.c  EngineExAPI.h  ExCommon.c  ExCommon.h  ExEngine.c  ExNT.h  ExPreProcessor.h  ShaderFile.h  elt_alloc.c  elt_alloc.h  elt_console.c  elt_console.h  elt_cpuinfo.c  elt_cpuinfo.h  elt_icon.h  elt_loadso.c  elt_loadso.h  elt_matrix.h  elt_thread.c  elt_thread.h  elt_timer.c  elt_timer.h
Source/Input/: GUIDs.h  XBoxControllerHandler.c  XBoxControllerHandler.h  elt_gamecontroller.c  elt_gamecontroller.h  elt_joystick.c  elt_joystick.h  elt_keyboard.c  elt_keyboard.h  elt_mouse.c  elt_mouse.h  eltkeycode.h
Source/System/: GL_caching.h  elt_audio.c  elt_audio.h  elt_cl.c  elt_cl.h  elt_errorhandler.c  elt_errorhandler.h  elt_event.c  elt_event.h  elt_file.c  elt_gl.c  elt_gl.h  elt_log.c  elt_log.h  elt_net.c  elt_net.h  elt_surface.c  elt_surface.h  elt_win.c  elt_win.h  eltfile.h
Source/System/Android/: elt_activity.c  elt_activity.h
Source/System/Font/: Font_System.c  Font_System.h
Source/System/Mac/: macosx_GL.h  macosx_win.h
Source/System/Unix/: unix_dialog.h  unix_win.c  unix_win.h
Source/System/Win32/: win_GL.c  win_GL.c~  win_GL.h  win_controls.c  win_controls.c~  win_controls.h  win_controls.h~  win_directX.c  win_directX.h  win_net.c  win_net.c~  win_net.h  win_net.h~  win_win32.c  win_win32.h  win_wndproc.c  win_wndproc.c~  win_wndproc.h  wnd_common.c  wnd_common.h  wnd_filedialog.c  wnd_filedialog.h  wnd_input.c  wnd_input.h  wnd_input.h~  wnd_snd.c  wnd_snd.c~
Source/jni/: .Android.mk.swp  Android.mk
Source/math/: frustum.c  frustum.h  matrix.c  matrix.h  quad.c  quad.h  raytrace.c  raytrace.h  vect.h
include/: EngineAssembly.h  EngineEx.h  EngineExAPI.h  ExAssert.h  ExCommon.h  ExNT.h  ExPreProcessor.h  audio.h  elt.h  elt_alloc.h  elt_assert.h  elt_atomic.h  elt_common.h  elt_console.h  elt_cpuinfo.h  elt_def.h  elt_endian.h  elt_env.h  elt_loadso.h  elt_matrix.h  elt_mutex.h  elt_platform.h  elt_thread.h  elt_timer.h  graphic.h  opencl.h  opengl.h  system.h  window.h
include/Input/: GUIDs.h  elt_joystick.h  elt_keyboard.h
include/System/: elt_errorhandler.h  elt_event.h
include/System/Win32/: win_controls.h  wnd_input.h
include/graphic/: color.h  font.h  geometry.h  rendertexture.h  shader.h  sprite.h  texture.h
include/input/: GUIDs.h  elt_gamecontroller.h  elt_joystick.h  elt_keyboard.h  elt_mouse.h  eltkeycode.h
include/math/: frustum.h  matrix.h  quad.h  raytrace.h  vect.h
include/system/: elt_audio.h  elt_cl.h  elt_clipboard.h  elt_egl.h  elt_errorhandler.h  elt_event.h  elt_file.h  elt_filesystem.h  elt_gl.h  elt_log.h  elt_net.h  elt_power.h  elt_render.h  elt_surface.h  elt_vulkan.h  elt_win.h  elt_zip.h  eltfile.h
include/system/android/: elt_activity.h
include/system/unix/: unix_win.h
port/AndroidJNI/: build.xml
port/java/: CMakeLists.txt
port/nacl/: .nacl.mk.swp  Makefile  nacl.mk
port/python/: Makefile
samples/CreateOpenGLWindow/: main
samples/CreateWindow/: main.c
samples/OpenGLRenderColorTriangle/: Makefile
samples/common/: common.c  common.h
samples/directionlight/: main.c
samples/gameoflife/: gameoflife.cl  main.c
samples/openglRenderTriangle/: Makefile  main
samples/openglcolortriangle/: main.c
samples/opengles/: main.c
samples/opengltriangle/: main  main.c
samples/openglwindow/: main  main.c
samples/picking/: main.c
samples/pyramid/: main.c
samples/shadow/: main.c
src/: EngineEx2.c  ExAssert.h  ExCommon.c  ExEngine.c  ExPreProcessor.h  elt.c  elt_alloc.c  elt_console.c  elt_cpuinfo.c  elt_cpuinfo.h  elt_endian.c  elt_icon.h  elt_loadso.c  elt_thread.c  elt_timer.c  resource.h
src/Input/: elt_mouse.c
src/System/: elt_errorhandler.h  elt_gl.h
src/graphic/: font.c  geometry.c  rendertexture.c  shader.c  sprite.c  texture.c
src/input/: GUIDs.h  XBoxControllerHandler.h  elt_gamecontroller.c  elt_gamecontroller.h  elt_joystick.c  elt_joystick.h  elt_keyboard.c  elt_mouse.c  elt_mouse.h
src/math/: frustum.c  matrix.c  matrix.h  quad.c  raytrace.c  vect.h
src/pnacl/: gl.c  pnacl_gl.c  pnaclmain.c  window.c
src/system/: elt_audio.c  elt_cl.c  elt_egl.c  elt_errorhandler.c  elt_event.c  elt_file.c  elt_gl.c  elt_log.c  elt_net.c  elt_surface.c  elt_vulkan.c  elt_win.c  elt_zip_file.c
src/uiCommand/: uiCommand.c  uiCommand.h
src/win32/: wingl.c
(+75 files in other folders)
